--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
 
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
+
+    // live location
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 }
